<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"    
    style="@style/WidgetBackground">

    

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:id="@+id/ll"
        android:layout_alignParentBottom="true"
        >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/menu_selected" 
            android:layout_weight="20"
            android:onClick="clickHandler"
            android:textSize="10sp"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/menu_select_by_type" 
            android:layout_weight="20"
            android:onClick="clickHandler"
            android:textSize="9sp"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/menu_select_by_programm" 
            android:layout_weight="20"
            android:onClick="clickHandler"
            android:textSize="9sp"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/menu_select_by_trainer" 
            android:layout_weight="20"
            android:onClick="clickHandler"
            android:textSize="9sp"/>

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:src="@android:drawable/ic_menu_preferences" 
            android:layout_weight="9"
            android:onClick="clickHandler"/>
    </LinearLayout>
<ListView
        android:id="@+id/lv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" 
        android:layout_above="@id/ll" 
        android:cacheColorHint="#00000000"
        >
    </ListView>
</RelativeLayout>