<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:id="@+id/layout">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/training"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:text="@string/training"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/trainingtile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:text="BODYPUMP"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/time_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:text="@string/time_start"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/time_start_tile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:text="20:00"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:text="@string/duration"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/duration_tile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:text="55"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/trainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:text="@string/trainer"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/trainer_tile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:text="Алексей З."
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:text="@string/place"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/place_tile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:text="Большой зал"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:text="@string/notes"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/notes_tile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:text="По записи"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:text="@string/description"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/description_tile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="10dp"
            android:text="Класс с использованием базовых элементов Йоги"
            android:textSize="14sp" />
    </RelativeLayout>

</LinearLayout>